--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://<Pallavi-Chundru>.github.io/<sample_react_code>/",
+
   "name": "sample",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +17,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+   
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+
+
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
