--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://<Pallavi-Chundru>.github.io/<sample_react_code>/",
-
+  "homepage": "https://Pallavi-Chundru.github.io/sample_react_code/",
   "name": "sample",
   "version": "0.1.0",
   "private": true,
@@ -18,11 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-   
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
